--- a/04-phonebook/pom.xml
+++ b/04-phonebook/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>data-algo</groupId>
@@ -53,13 +56,13 @@
             </goals>
             <configuration>
               <!-- Sets the path to the file which contains the execution data. -->
-              <!-- <destFile>${sonar.jacoco.reportPath}</destFile> --> 
+              <!-- <destFile>${sonar.jacoco.reportPath}</destFile> -->
               <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-              <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>  
+              <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
               <propertyName>surefireArgLine</propertyName>
             </configuration>
           </execution>
-          <!-- Ensures that the code coverage report for unit tests is created 
+          <!-- Ensures that the code coverage report for unit tests is created
               after unit tests have been run. -->
           <execution>
             <id>post-unit-test</id>
